--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,11 +17,12 @@ body {
     padding: 15px 35px;
 }
 
-/* Nav related styles */
+/* nav related styles */
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -43,4 +44,18 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+/* header related styles */
+.header{
+    background-color: #FFF8F3;
+
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
+
 }
