--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,7 +29,7 @@ body {
     color: #757575;
     text-align: center;
     font-size: 18px;
-    
+
 
 }
 
@@ -112,6 +112,10 @@ nav a {
 
 
 /* main section styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about section styles */
 .about {
@@ -119,4 +123,18 @@ nav a {
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    color:  #757575;
+    text-align: center;
+     font-size: 20px;
+     font-weight: 400;
+     word-spacing: 2px;
+     
 }
