--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -134,7 +134,10 @@ main {
     color:  #757575;
     text-align: center;
      font-size: 20px;
-     font-weight: 400;
-     word-spacing: 2px;
-     
+     font-weight: 400px;
 }
+#what-i-do-description{
+    padding: 30px 150px;
+}
+    
+     
