--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -135,9 +135,21 @@ main {
     text-align: center;
      font-size: 20px;
      font-weight: 400px;
+
+     /* Skills related styles */
 }
 #what-i-do-description{
     padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+}
+.skill{
+    padding: 30px;
+    gap: 24px;
+}
+.skill-description{
+    
 }
     
      
