--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -117,6 +117,10 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -131,25 +135,39 @@ main {
 }
 
 .about-info {
-    color:  #757575;
+    color: #757575;
     text-align: center;
-     font-size: 20px;
-     font-weight: 400px;
+    font-size: 20px;
+    font-weight: 400px;
 
-     /* Skills related styles */
+    /* Skills related styles */
 }
-#what-i-do-description{
+
+#what-i-do-description {
     padding: 30px 150px;
 }
-.skills-container{
+
+.skills-container {
     display: flex;
-}
-.skill{
-    padding: 30px;
     gap: 24px;
 }
-.skill-description{
-    
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
 }
-    
-     
+
+.skill-description {
+    color: #757575;
+}
+
+/* Resume Setion Styles */
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
