--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -203,3 +203,11 @@ main section {
     text-align: center;
     margin-top: 50px;
 }
+
+/* Footer style */
+footer{
+    display: flex;
+    margin-top: 100px;
+    background:  #FFF8F3;
+    padding: 130px 200px;
+}
