--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -178,14 +178,14 @@ main section {
 }
 
 .resume-item-title {
-    color:  #474747;
+    color: #474747;
     font-size: 25px;
     font-weight: 700;
     margin-bottom: 10px;
-    
+
 }
 
-.resume-item-institute{
+.resume-item-institute {
     margin-bottom: 20px;
     margin-top: 0px;
 }
@@ -195,19 +195,44 @@ main section {
     color: #757575;
 
 }
-.resume-container hr{
+
+.resume-container hr {
     margin: 30px;
 }
 
-.download-cv{
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
 
 /* Footer style */
-footer{
+footer {
     display: flex;
+    gap: 100px;
     margin-top: 100px;
-    background:  #FFF8F3;
+    background: #FFF8F3;
     padding: 130px 200px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.soical-links a{
+    margin-right: 25px;
+}
+
+.contact input[type="text"], .contact input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background:  #FFF;
+    border: 0;
+    width: 100%;
+}
+.section-title{
+    text-align: left;
 }
