--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -65,9 +65,9 @@ nav a {
 /* header related styles */
 .header {
     background-color: #FFF8F3;
-    background-image: url(../images/header_bg.png);
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 
 }
 
@@ -233,3 +233,4 @@ textarea {
     border: 0;
     width: 100%;
 }
+
