--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -71,6 +71,12 @@ nav a {
 
 }
 
+.profile-pic{
+    position: relative;
+    margin-top: 57px;
+
+}
+
 .banner {
     padding: 30px 30px 0px 150px;
     display: flex;
