--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -66,6 +66,7 @@ nav a {
 .header {
     background-color: #FFF8F3;
     background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    background-size: auto auto, 100px 661px;
     background-repeat: no-repeat;
     background-position: bottom right, top left;
 
